Add infra and app code

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,13 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+**/.terraform/
+*.tfstate
+*.tfstate.*
+default.tfvars
+
+.env
+certs/*
+!**/.gitkeep
+node_modules/
